# internal/core/adapter/driver/rest/v1/openapi_type.gen.go
@@ -3,16 +3,19 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.3 DO NOT EDIT.
 package v1
 
-import (
-	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
-)
-
 // Defines values for ErrorSlug.
 const (
-	LevelNotFound     ErrorSlug = "level-not-found"
-	ProgramNotFound   ErrorSlug = "program-not-found"
-	SpecialtyNotFound ErrorSlug = "specialty-not-found"
-	UgsnNotFound      ErrorSlug = "ugsn-not-found"
+	BadRequest             ErrorSlug = "bad-request"
+	EmptyBearerToken       ErrorSlug = "empty-bearer-token"
+	InvalidJson            ErrorSlug = "invalid-json"
+	InvalidLevelParameters ErrorSlug = "invalid-level-parameters"
+	LevelNotFound          ErrorSlug = "level-not-found"
+	ProgramNotFound        ErrorSlug = "program-not-found"
+	SpecialtyNotFound      ErrorSlug = "specialty-not-found"
+	UgsnNotFound           ErrorSlug = "ugsn-not-found"
+	UnableToVerifyJwt      ErrorSlug = "unable-to-verify-jwt"
+	UnauthorizedUser       ErrorSlug = "unauthorized-user"
+	UnexpectedError        ErrorSlug = "unexpected-error"
 )
 
 // CreateLevelRequest defines model for CreateLevelRequest.
@@ -49,25 +52,27 @@ type ErrorSlug string
 
 // LevelResponse defines model for LevelResponse.
 type LevelResponse struct {
-	Id    openapi_types.UUID `json:"id"`
-	Title string             `json:"title"`
+	Id    string `json:"id"`
+	Title string `json:"title"`
 }
 
 // ProgramResponse defines model for ProgramResponse.
 type ProgramResponse struct {
 	Code  string `json:"code"`
+	Id    string `json:"id"`
 	Title string `json:"title"`
 }
 
 // SpecialtyResponse defines model for SpecialtyResponse.
 type SpecialtyResponse struct {
 	Code  string `json:"code"`
+	Id    string `json:"id"`
 	Title string `json:"title"`
 }
 
 // SpecificLevelResponse defines model for SpecificLevelResponse.
 type SpecificLevelResponse struct {
-	Id    openapi_types.UUID     `json:"id"`
+	Id    string                 `json:"id"`
 	Title string                 `json:"title"`
 	Ugsn  []SpecificUgsnResponse `json:"ugsn"`
 }
@@ -75,6 +80,7 @@ type SpecificLevelResponse struct {
 // SpecificSpecialtyResponse defines model for SpecificSpecialtyResponse.
 type SpecificSpecialtyResponse struct {
 	Code    string            `json:"code"`
+	Id      string            `json:"id"`
 	Program []ProgramResponse `json:"program"`
 	Title   string            `json:"title"`
 }
@@ -82,6 +88,7 @@ type SpecificSpecialtyResponse struct {
 // SpecificUgsnResponse defines model for SpecificUgsnResponse.
 type SpecificUgsnResponse struct {
 	Code      string                      `json:"code"`
+	Id        string                      `json:"id"`
 	Specialty []SpecificSpecialtyResponse `json:"specialty"`
 	Title     string                      `json:"title"`
 }
@@ -89,6 +96,7 @@ type SpecificUgsnResponse struct {
 // UgsnResponse defines model for UgsnResponse.
 type UgsnResponse struct {
 	Code  string `json:"code"`
+	Id    string `json:"id"`
 	Title string `json:"title"`
 }
 
@@ -104,8 +112,8 @@ type AddSpecialtiesJSONBody = interface{}
 // AddProgramsJSONRequestBody defines body for AddPrograms for application/json ContentType.
 type AddProgramsJSONRequestBody = AddProgramsJSONBody
 
-// CreateLevelEducationJSONRequestBody defines body for CreateLevelEducation for application/json ContentType.
-type CreateLevelEducationJSONRequestBody = CreateLevelRequest
+// CreateLevelJSONRequestBody defines body for CreateLevel for application/json ContentType.
+type CreateLevelJSONRequestBody = CreateLevelRequest
 
 // AddUgsnJSONRequestBody defines body for AddUgsn for application/json ContentType.
 type AddUgsnJSONRequestBody = AddUgsnJSONBody
